@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opennms</groupId>
   <artifactId>opennms</artifactId>
-  <version>31.0.3-SNAPSHOT</version>
+  <version>32.0.7-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>OpenNMS</name>
   <url>http://opennms.org/</url>
@@ -103,7 +103,6 @@
     <module>opennms-taglib</module>
     <module>opennms-jetty</module>
     <module>opennms-correlation</module>
-    <module>opennms-reporting</module>
     <module>opennms-web-api</module>
     <module>opennms-web-dependencies</module>
     <module>opennms-webapp</module>
@@ -443,6 +442,7 @@
           <workingDirectory>${project.build.directory}</workingDirectory>
           <skipIfExist>true</skipIfExist>
           <keystore>${test.keystore}</keystore>
+          <keyalg>RSA</keyalg>
           <storepass>${test.storepass}</storepass>
           <alias>${test.keyalias}</alias>
           <keypass>${test.keypass}</keypass>
@@ -815,19 +815,6 @@
               </pluginExecution>
               <pluginExecution>
                 <pluginExecutionFilter>
-                  <groupId>org.codehaus.mojo</groupId>
-                  <artifactId>axistools-maven-plugin</artifactId>
-                  <versionRange>[1.4,)</versionRange>
-                  <goals>
-                    <goal>wsdl2java</goal>
-                  </goals>
-                </pluginExecutionFilter>
-                <action>
-                  <ignore/>
-                </action>
-              </pluginExecution>
-              <pluginExecution>
-                <pluginExecutionFilter>
                   <groupId>org.commonjava.maven.plugins</groupId>
                   <artifactId>directory-maven-plugin</artifactId>
                   <versionRange>[1.0,)</versionRange>
@@ -1110,7 +1097,7 @@
                  <version>[3.5,)</version>
                </requireMavenVersion>
                <requireJavaVersion>
-                 <version>[11,12)</version>
+                 <version>[11,18)</version>
                </requireJavaVersion>
              </rules>
            </configuration>
@@ -1134,13 +1121,14 @@
                    <exclude>xml-apis:xml-apis</exclude>
 
                    <exclude>asm:*</exclude>                          <!-- use: org.ow2.asm.* -->
-                   <exclude>org.ow2.asm:asm-all</exclude>            <!-- use: org.ow2.asm.* -->
+                   <exclude>org.ow2.asm:asm-all</exclude>            <!-- doesn't exist anymore, use individual deps -->
                    <exclude>bouncycastle:*</exclude>                 <!-- use: org.bouncycastle:* instead, but not in a way that ends up in $OPENNMS_HOME/lib/ -->
                    <exclude>bsh:*</exclude>                          <!-- use: org.apache-extras.beanshell:bsh -->
                    <exclude>c3p0:c3p0</exclude>                      <!-- use: com.mchange:c3p0 -->
                    <exclude>commons-logging:*</exclude>              <!-- use: jcl-over-slf4j -->
                    <exclude>com.github.detro:*</exclude>             <!-- use: com.codeborne.phantomjsdriver -->
                    <exclude>com.github.detro.ghostdriver:*</exclude> <!-- use: com.codeborne.phantomjsdriver -->
+                   <exclude>com.sun.mail:jakarta.mail</exclude>      <!-- use: javax.mail:mail -->
                    <exclude>dom4j:dom4j</exclude>                    <!-- use: org.dom4j:dom4j -->
                    <exclude>javax.servlet:jstl</exclude>             <!-- use: jstl-dependencies -->
                    <exclude>javax.servlet.jsp:jsp-api</exclude>      <!-- use: servlet-dependencies -->
@@ -1300,8 +1288,6 @@
             <opennms.library.jicmp>${opennms.library.jicmp}</opennms.library.jicmp>
             <opennms.library.jrrd>${opennms.library.jrrd}</opennms.library.jrrd>
             <install.rrdtool.bin>${install.rrdtool.bin}</install.rrdtool.bin>
-            <runRemedyTests>${runRemedyTests}</runRemedyTests>
-            <runOtrsTests>${runOtrsTests}</runOtrsTests>
             <runRtTests>${runRtTests}</runRtTests>
             <runMailTests>${runMailTests}</runMailTests>
             <runPingTests>${runPingTests}</runPingTests>
@@ -1368,6 +1354,12 @@
         <groupId>org.apache.cxf</groupId>
         <artifactId>cxf-xjc-plugin</artifactId>
         <version>${cxfXjcVersion}</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.karaf.tooling</groupId>
+        <artifactId>karaf-maven-plugin</artifactId>
+        <version>${maven.karaf.plugin.version}</version>
+        <extensions>true</extensions>
       </plugin>
     </plugins>
  </build>
@@ -1480,7 +1472,20 @@
       problematic pauses when starting MockSnmpAgent in unit tests.
     -->
     <argLineMemory>-Xmx4g -XX:ReservedCodeCacheSize=1g</argLineMemory>
-    <argLine>${argLineMemory} -Djava.security.egd=file:/dev/./urandom</argLine>
+    <argLineAllowReflection>--add-opens java.base/java.lang=ALL-UNNAMED
+        --add-opens=java.desktop/java.beans=ALL-UNNAMED
+        --add-opens=java.base/java.io=ALL-UNNAMED
+        --add-opens=java.base/java.lang=ALL-UNNAMED
+        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+        --add-opens=java.base/java.math=ALL-UNNAMED
+        --add-opens=java.base/java.util=ALL-UNNAMED
+        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+        --add-opens=java.base/java.util.regex=ALL-UNNAMED
+        --add-opens=java.base/java.net=ALL-UNNAMED
+        --add-opens=java.base/java.text=ALL-UNNAMED
+        --add-opens=java.base/sun.util.locale.provider=ALL-UNNAMED
+        --add-opens=java.sql/java.sql=ALL-UNNAMED</argLineAllowReflection>
+    <argLine>${argLineMemory} -Djava.security.egd=file:/dev/./urandom ${argLineAllowReflection}</argLine>
     <skipITs>true</skipITs>
     <runPingTests>false</runPingTests>
 
@@ -1527,7 +1532,7 @@
     <install.version>${project.version}</install.version>
     <display.version>${install.version}</display.version>
     <opennms.home>${dist.dir}/${dist.name}</opennms.home>
-    <opennms.osgi.version>31.0.3.SNAPSHOT</opennms.osgi.version>
+    <opennms.osgi.version>32.0.7.SNAPSHOT</opennms.osgi.version>
     <root.dir>${project.basedir}</root.dir>
     <dist.dir>${root.dir}/target</dist.dir>
     <dist.name>opennms-${project.version}</dist.name>
@@ -1597,9 +1602,8 @@
     <bsonVersion>3.5.0</bsonVersion>
     <caffeineVersion>2.8.0</caffeineVersion>
     <camelVersion>2.21.5</camelVersion>
-    <cassandraUnitVersion>3.11.2.0</cassandraUnitVersion>
-    <!-- Match Newts version -->
-    <cassandraVersion>3.11.5</cassandraVersion>
+    <!-- Match (or beat) Newts version -->
+    <cassandraVersion>4.17.0</cassandraVersion>
     <cloverVersion>3.2.0</cloverVersion>
     <commonsBeanutilsVersion>1.9.4</commonsBeanutilsVersion>
     <commonsChainVersion>1.2</commonsChainVersion>
@@ -1637,14 +1641,15 @@
     <dhcp4javaVersion>1.1.0</dhcp4javaVersion>
     <dnsjavaVersion>3.5.2_1</dnsjavaVersion>
     <dom4jVersion>2.1.4</dom4jVersion>
-    <dropwizardMetricsVersion>3.1.2</dropwizardMetricsVersion>
+    <dropwizardMetricsVersion>4.2.10</dropwizardMetricsVersion>
     <ecjVersion>4.4.2</ecjVersion>
     <eclipseGeminiVersion>2.1.0.RELEASE</eclipseGeminiVersion>
     <eclipselinkVersion>2.5.1</eclipselinkVersion>
     <eddsaVersion>0.3.0</eddsaVersion>
-    <elasticsearchNettyVersion>4.1.69.Final</elasticsearchNettyVersion>
-    <elasticsearchTargetVersion>7.6.2</elasticsearchTargetVersion>
-    <felixBridgeVersion>4.0.12</felixBridgeVersion>
+    <elasticsearchNettyVersion>${netty4Version}</elasticsearchNettyVersion>
+    <elasticsearchDriftPluginVersion>2.0.5</elasticsearchDriftPluginVersion>
+    <elasticsearchTargetVersion>7.17.9</elasticsearchTargetVersion>
+    <felixBridgeVersion>4.1.6</felixBridgeVersion>
     <felixProxyVersion>3.0.6</felixProxyVersion>
     <fopVersion>2.9</fopVersion>
     <freemarkerVersion>2.3.32</freemarkerVersion>
@@ -1654,12 +1659,12 @@
     <geohashVersion>1.4.0</geohashVersion>
     <geoipVersion>2.15.0</geoipVersion>
     <geronimoVersion>1.1.1</geronimoVersion>
-    <groovyVersion>2.5.22</groovyVersion>
+    <groovyVersion>3.0.18</groovyVersion>
     <grpcVersion>1.46.0</grpcVersion>
     <gsonVersion>2.9.1</gsonVersion>
-    <guavaVersion>25.1-jre</guavaVersion>
-    <guavaOsgiVersion>25.1.0</guavaOsgiVersion>
-    <guavagRPCVersion>28.2-jre</guavagRPCVersion>
+    <guavaVersion>31.1-jre</guavaVersion>
+    <guavaOsgiVersion>31.1</guavaOsgiVersion>
+    <guavagRPCVersion>30.1-jre</guavagRPCVersion>
     <gwtVersion>2.9.0</gwtVersion>
     <gwtPluginVersion>${gwtVersion}</gwtPluginVersion>
     <h2databaseVersion>1.4.197</h2databaseVersion>
@@ -1689,8 +1694,8 @@
     <jaxbRuntimeVersion>2.3.3</jaxbRuntimeVersion>
     <!-- this should match what's in Karaf's lib/jdk9plus directory -->
     <jakartaXmlBindVersion>2.3.3</jakartaXmlBindVersion>
-    <!-- this should match what's in Karaf's lib/jdk9plus directory -->
-    <javaxAnnotationApiVersion>1.3.1</javaxAnnotationApiVersion>
+    <!-- major.minor should match what's in Karaf's lib/jdk9plus directory -->
+    <javaxAnnotationApiVersion>1.3.2</javaxAnnotationApiVersion>
     <javaxMailVersion>1.4.7</javaxMailVersion>
     <jbossLoggingVersion>3.5.3.Final</jbossLoggingVersion>
     <jcifsVersion>2.1.6</jcifsVersion>
@@ -1709,6 +1714,7 @@
     <jmhVersion>1.37</jmhVersion>
     <jmxremote.optional.version>1.0_01-ea</jmxremote.optional.version>
     <jnaVersion>5.12.1</jnaVersion>
+    <jnrVersion>3.1.17</jnrVersion>
     <jodaTimeVersion>2.12.5</jodaTimeVersion>
     <jolokiaVersion>1.7.2</jolokiaVersion>
     <jqwikVersion>1.6.5</jqwikVersion>
@@ -1763,18 +1769,19 @@
     <mockitoVersion>3.12.4</mockitoVersion>
     <netty3Version>3.10.6.Final</netty3Version>
     <netty4Version>4.1.100.Final</netty4Version>
-    <newtsVersion>1.5.7</newtsVersion>
+    <newtsVersion>3.0.0</newtsVersion>
+    <newtsOsgiVersion>3.0.0</newtsOsgiVersion>
     <paxCdiVersion>1.1.4</paxCdiVersion>
     <paxExamVersion>4.13.5</paxExamVersion>
     <pktsVersion>3.0.10</pktsVersion>
-    <protobufVersion>3.16.3</protobufVersion>
+    <protobufVersion>3.22.5</protobufVersion>
     <postgresqlVersion>42.5.4</postgresqlVersion>
     <powermockVersion>2.0.9</powermockVersion>
     <okhttpVersion>4.9.3</okhttpVersion>
     <okioVersion>3.6.0</okioVersion>
     <openid4javaVersion>0.9.6</openid4javaVersion>
-    <opennmsApiVersion>1.5.0</opennmsApiVersion>
-    <opennmsApiVersionOsgi>1.5.0</opennmsApiVersionOsgi>
+    <opennmsApiVersion>1.6.0</opennmsApiVersion>
+    <opennmsApiVersionOsgi>1.6.0</opennmsApiVersionOsgi>
     <osgiVersion>7.0.0</osgiVersion>
     <osgiAnnotationVersion>7.0.0</osgiAnnotationVersion>
     <osgiCompendiumVersion>7.0.0</osgiCompendiumVersion>
@@ -1803,6 +1810,7 @@
     <snmp4jVersion>2.5.5</snmp4jVersion>
     <snmp4jagentVersion>2.5.3</snmp4jagentVersion>
     <sonarVersion>3.9.1.2184</sonarVersion>
+    <spiflyVersion>1.3.6</spiflyVersion>
     <spockVersion>2.3-groovy-2.5</spockVersion>
     <swaggerUIVersion>3.13.0</swaggerUIVersion>
     <swaggerVersion>2.1.12</swaggerVersion>
@@ -1815,7 +1823,7 @@
     <vaadinJsoupVersion>1.15.3</vaadinJsoupVersion>
     <vaadinGentyrefVersion>1.2.0.vaadin1</vaadinGentyrefVersion>
     <velocityVersion>2.3</velocityVersion>
-    <xalanVersion>2.7.3.ONMS.1</xalanVersion>
+    <xalanVersion>2.7.3</xalanVersion>
     <xalanServicemixVersion>2.7.3_0_ONMS_1</xalanServicemixVersion>
     <xercesVersion>2.12.2</xercesVersion>
     <xmlApisExtVersion>1.3.04</xmlApisExtVersion>
@@ -1921,6 +1929,32 @@
           </snapshots>
         </repository>
       </repositories>
+    </profile>
+    <profile>
+      <id>sbom</id>
+      <activation>
+        <property>
+          <name>build.sbom</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.cyclonedx</groupId>
+            <artifactId>cyclonedx-maven-plugin</artifactId>
+            <version>2.7.11</version>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>makeAggregateBom</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
       <id>coverage</id>
@@ -2062,8 +2096,8 @@
         </pluginRepository>
         <pluginRepository>
           <id>opennms-snapshots</id>
-          <name>OpenNMS Snapshot Maven Repository</name>
-          <url>https://maven.opennms.org/content/groups/opennms.org-snapshot/</url>
+          <name>OpenNMS Snapshot Maven Mega-Repository</name>
+          <url>https://maven.opennms.org/repository/everything/</url>
           <releases>
             <enabled>false</enabled>
           </releases>
@@ -2799,11 +2833,6 @@
       </dependency>
       <dependency>
         <groupId>org.opennms</groupId>
-        <artifactId>opennms-rancid-provisioning-adapter</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.opennms</groupId>
         <artifactId>opennms-wsman-asset-provisioning-adapter</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -3283,22 +3312,7 @@
       </dependency>
       <dependency>
         <groupId>org.opennms.features</groupId>
-        <artifactId>opennms-integration-otrs</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.opennms.features</groupId>
-        <artifactId>opennms-integration-otrs-31</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.opennms.features</groupId>
         <artifactId>opennms-integration-rt</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.opennms.features</groupId>
-        <artifactId>opennms-integration-remedy</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -3381,11 +3395,6 @@
       </dependency>
       <dependency>
         <groupId>org.opennms</groupId>
-        <artifactId>opennms-reporting</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.opennms</groupId>
         <artifactId>opennms-reportd</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -3417,11 +3426,6 @@
       <dependency>
         <groupId>org.opennms</groupId>
         <artifactId>opennms-rrd-tcp</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.opennms</groupId>
-        <artifactId>opennms-rws</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -3549,12 +3553,6 @@
         <type>pom</type>
       </dependency>
       <dependency>
-        <groupId>org.opennms.dependencies</groupId>
-        <artifactId>rancid-dependencies</artifactId>
-        <version>${project.version}</version>
-        <type>pom</type>
-      </dependency>
-      <dependency>
         <groupId>org.opennms</groupId>
         <artifactId>opennms-asterisk</artifactId>
         <version>${project.version}</version>
@@ -3635,7 +3633,17 @@
       </dependency>
       <dependency>
         <groupId>org.ow2.asm</groupId>
+        <artifactId>asm-bom</artifactId>
+        <version>${asmVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.ow2.asm</groupId>
         <artifactId>asm-commons</artifactId>
+        <version>${asmVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm-test</artifactId>
         <version>${asmVersion}</version>
       </dependency>
       <dependency>
@@ -4184,7 +4192,7 @@
       <dependency>
         <groupId>com.google.errorprone</groupId>
         <artifactId>error_prone_annotations</artifactId>
-        <version>2.10.0</version>
+        <version>2.18.0</version>
       </dependency>
       <dependency>
         <groupId>com.google.guava</groupId>
@@ -4618,6 +4626,11 @@
         <version>${dropwizardMetricsVersion}</version>
       </dependency>
       <dependency>
+        <groupId>io.dropwizard.metrics</groupId>
+        <artifactId>metrics-jmx</artifactId>
+        <version>${dropwizardMetricsVersion}</version>
+      </dependency>
+      <dependency>
         <groupId>org.jdom</groupId>
         <artifactId>jdom2</artifactId>
         <version>${jdom2Version}</version>
@@ -4877,6 +4890,16 @@
       <dependency>
         <groupId>io.netty</groupId>
         <artifactId>netty-codec</artifactId>
+        <version>${netty4Version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-codec-http</artifactId>
+        <version>${netty4Version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-resolver</artifactId>
         <version>${netty4Version}</version>
       </dependency>
       <dependency>
@@ -5383,6 +5406,21 @@
         <groupId>org.apache.sshd</groupId>
         <artifactId>sshd-sftp</artifactId>
         <version>${minaSshdVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.zookeeper</groupId>
+        <artifactId>zookeeper</artifactId>
+        <version>${zookeeperVersion}</version>
+        <exclusions>
+          <exclusion>
+            <artifactId>log4j</artifactId>
+            <groupId>log4j</groupId>
+          </exclusion>
+          <exclusion>
+            <artifactId>slf4j-log4j12</artifactId>
+            <groupId>org.slf4j</groupId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.xerial.snappy</groupId>
